syntax = "proto3";

option go_package = "github.com/btschwartz12/redis-lite/kv_store";


message StoreRequest {
    string key = 1;
    string value = 2;
}

message StoreResponse {
    bool success = 1;
    string error = 2;
}

message RetrieveRequest {
    string key = 1;
}

message RetrieveResponse {
    bool found = 1;
    string value = 2;
    string error = 3;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
    string error = 2;
}

service KeyValueStore {
    rpc Store(StoreRequest) returns (StoreResponse) {}
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
